2019-04-03  Gavin Smith  <gavinsmith0123@gmail.com>

	Optionally use backslash as index escape character.

	* doc/texinfo.tex
	(\doindwrite): If the user gave '@set txiindexescapeisbackslash',
	then use \ as the escape character in the index file.
	(\splitindexentry): Use \string to output \indexlbrace etc.
	(\printindex): Under the same condition, read the sorted index 
	file with backslash as an escape character.  Expand the advice 
	on how to print the indices properly.

2019-04-03  Gavin Smith  <gavinsmith0123@gmail.com>

	Do not output literal backslash character in index files.

	* doc/texinfo.tex
	(\splitindexentry): In the sort key, use '{@indexbackslash }' 
	for a backslash, instead of a backslash character.
	(\initialglyphs): Recognize \indexbackslash.
	(\doindwrite): Output a backslash character as '@backslashchar {}'.
	(\definedummies): Define \backslashchar as a dummy.

	* doc/texinfo-tex-test.texi (Test of certain characters in index):
	Add more examples.

	This is intended to make it more reliable for either backslash 
	or at sign to be used as the escape character in index files, 
	for use with old versions of texi2dvi.  (This also allows 
	reading in old index files that used the \indexbackslash 
	sequence, although that is not very important.)

2019-04-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* js/info.js (scan_toc): Use getElementById instead of 
	querySelector, as id's are unique.  From Mathieu.

2019-04-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\urefallowbreak): Reduce stretch from 1fil to 4em.

	This discourages breaking too early in the line.

2019-04-02  Gavin Smith  <gavinsmith0123@gmail.com>

	Support links between locally-installed manuals.

	* js/info.js (external_manual_url_p): New function.
	(fix_links): If a link to an external manual, open link in the 
	same browser tab.
	(on_click): No special handling of links to external manuals.

	This is intended to support links between locally-installed HTML 