@@ -1,0 +1,13 @@
+
+$l2h_cache_key = q/$3\delta + 2
+$/;
+$l2h_cache{$l2h_cache_key} = q|<SPAN CLASS="MATH"><IMG STYLE="height: 2.03ex; vertical-align: -0.31ex; " SRC="math_not_closed_2.svg"
+ ALT="$3\delta + 2
+$"></SPAN>|;
+
+$l2h_cache_key = q/$\delta + 2
+$/;
+$l2h_cache{$l2h_cache_key} = q|<SPAN CLASS="MATH"><IMG STYLE="height: 2.03ex; vertical-align: -0.31ex; " SRC="math_not_closed_1.svg"
+ ALT="$\delta + 2
+$"></SPAN>|;
+1;
