@@ -2,4 +2,5 @@ math_not_closed.texi:8: warning: @chapter should not appear in @math
 math_not_closed.texi:7: @chapter seen before @math closing brace
 math_not_closed.texi:11: warning: @bye should not appear in @math
 math_not_closed.texi:10: @bye seen before @math closing brace
+texexpand 
 math_not_closed.texi: warning: must specify a title with a title command or @top
