@@ -35,9 +35,13 @@ ul.no-bullet {list-style: none}
 <body lang="en">
 
 <span id="Top"></span>
-<span id="Chapter"></span><h1 class="chapter">1 Chapter</h1>
+<p><SPAN CLASS="MATH"><IMG STYLE="height: 2.03ex; vertical-align: -0.31ex; " SRC="math_not_closed_1.svg"
+ ALT="$\delta + 2
+$"></SPAN></p><span id="Chapter"></span><h1 class="chapter">1 Chapter</h1>
 
-<hr>
+<p><SPAN CLASS="MATH"><IMG STYLE="height: 2.03ex; vertical-align: -0.31ex; " SRC="math_not_closed_2.svg"
+ ALT="$3\delta + 2
+$"></SPAN></p><hr>
 <p><font size="-1">
   This document was generated on <em>a sunny day</em> using <a href="http://www.gnu.org/software/texinfo/"><em>texi2any</em></a>.
 </font></p>
