@@ -1,0 +1,38 @@
+<!DOCTYPE HTML>
+
+<!--Converted with LaTeX2HTML
+<HTML lang="EN">
+<HEAD>
+<TITLE>math_not_closed_l2h</TITLE>
+<META NAME="description" CONTENT="math_not_closed_l2h">
+<META NAME="keywords" CONTENT="math_not_closed_l2h">
+<META NAME="resource-type" CONTENT="document">
+<META NAME="distribution" CONTENT="global">
+
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
+<META NAME="viewport" CONTENT="width=device-width, initial-scale=1.0">
+<META NAME="Generator" CONTENT="LaTeX2HTML">
+
+<LINK REL="STYLESHEET" HREF="math_not_closed_l2h.css">
+
+</HEAD>
+
+<BODY >
+
+<!-- l2h_begin math_not_closed_l2h 1 -->
+<SPAN CLASS="MATH"><IMG STYLE="height: 2.03ex; vertical-align: -0.31ex; " SRC="math_not_closed_l2h_img1.svg"
+ ALT="$\delta + 2
+$"></SPAN>
+
+<!-- l2h_end math_not_closed_l2h 1 -->
+
+<!-- l2h_begin math_not_closed_l2h 2 -->
+<SPAN CLASS="MATH"><IMG STYLE="height: 2.03ex; vertical-align: -0.31ex; " SRC="math_not_closed_l2h_img2.svg"
+ ALT="$3\delta + 2
+$"></SPAN>
+
+<!-- l2h_end math_not_closed_l2h 2 -->
+<BR>
+<HR>
+</BODY>
+</HTML>
