@@ -3,4 +3,24 @@
 \documentclass{article}
 \usepackage{html}
 \begin{document}
+\begin{rawhtml}
+
+<!-- l2h_begin math_not_closed_l2h 1 -->
+\end{rawhtml}
+$\delta + 2
+$
+\begin{rawhtml}
+<!-- l2h_end math_not_closed_l2h 1 -->
+
+\end{rawhtml}
+\begin{rawhtml}
+
+<!-- l2h_begin math_not_closed_l2h 2 -->
+\end{rawhtml}
+$3\delta + 2
+$
+\begin{rawhtml}
+<!-- l2h_end math_not_closed_l2h 2 -->
+
+\end{rawhtml}
 \end{document}
